--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2022-07-06  Ivan Maidanski <ivmai@mail.ru>
+
+	* include/private/gcconfig.h [MPROTECT_VDB && (__GLIBC__<2
+	|| __GLIBC__==2 && __GLIBC_MINOR__<2)]: Move error directive from
+	os_dep.c.
+	*  include/private/gcconfig.h [FREEBSD && __GLIBC__] (SUNOS5SIGS):
+	Define.
+	* os_dep.c [MPROTECT_VDB && !DARWIN && FREEBSD] (GC_dirty_init): Do not
+	check __GLIBC__.
+
+2022-07-05  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README.macros (SUNOS5SIGS): Update documentation (mention
+	FreeBSD to match that in gcconfig.h).
+
 2022-06-14  Ivan Maidanski <ivmai@mail.ru>
 
 	* typd_mlc.c (GC_make_array_descriptor): Add comment that no overflow
