Update AUTHORS file (add Davide Beatrici)

--- a/AUTHORS
+++ b/AUTHORS
@@ -135,6 +135,7 @@ David Stes <stes@d5e02b1d.kabel.telenet.be>
 David Terei <d@davidterei.com>
 David Van Horn <dvanhorn@ccs.neu.edu>
 Davide Angelocola <davide.angelocola@tiscali.it>
+Davide Beatrici <git@davidebeatrici.dev>
 Demyan Kimitsa <demyan.kimitsa@gmail.com>
 Dick Porter <dick@acm.org>
 Dietmar Planitzer <dave.pl@ping.at>
