--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+[7.2p]
+
+2022-08-25  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2p (rev. P).
+	* Makefile.am (libgc_la_LDFLAGS): Bump version-info to 2:5:1.
+	* Makefile.in: Regenerate.
+
 2022-08-03  Ivan Maidanski <ivmai@mail.ru>
 
 	* doc/tree.html (A picture): Change type of hb_obj_kind (of hblkhdr)
