--- a/ChangeLog
+++ b/ChangeLog
@@ -1050,12 +1050,13 @@ Also, includes 7.4.4 changes
 * Eliminate 'new_l may be used uninitialized' gcc warning in os_dep (Cygwin)
 * Eliminate 'possible loss of data' compiler warning in GC_envfile_getenv
 * Fix 'undeclared getpagesize' compiler warning on AIX and OSF1
+* Fix GC_dirty() argument in GC_malloc_explicitly_typed_ignore_off_page
+* Fix SIGSEGV caused by dropped stack access from child process in gctest
 * Fix abort in Win32 DllMain if PARALLEL_MARK
 * Fix assertion violation of GC_thread_key alignment if pthread-based TLS
 * Fix comment in GC_init regarding GC_init_parallel call
-* Fix GC_dirty() argument in GC_malloc_explicitly_typed_ignore_off_page
-* Fix SIGSEGV caused by dropped stack access from child process in gctest
 * Fix stack overflow in gctest on Alpine Linux/s390x
+* Revert "Remove nested always-false ifdef for HPUX and FREEBSD"
 * Use SIGRTMIN+6 as suspend signal if sigrt-signals on OpenBSD
 * Workaround crash in FreeBSD rand() by avoiding its concurrent usage
 
@@ -1591,11 +1592,14 @@ Also, includes 7.2 changes
 == [7.2p] (not released yet) ==
 
 * Avoid potential race in GC_init_real_syms after GC_allow_register_threads
+* Define SUNOS5SIGS macro for kFreeBSD
 * Do not assert that GC is initialized at DLL_THREAD_DETACH (Win32)
 * Ensure typed objects descriptor is never located in the first word
 * Fix GC_make_descriptor for zero length argument
+* Fix SUNOS5SIGS documentation to match macro definition in gcconfig.h
 * Fix assertion violation in GC_allow_register_threads on Windows
 * Fix get_maps failure when GC_repeat_read returns zero
+* Fix hb_obj_kind type in documentation (ASCII diagram) describing hblkhdr
 * Fix missing lock when GC_generate_random_valid_address is called
 * Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
 * Fix oldProc initialization in gc_cleanup and eliminate related warnings
