Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -262,6 +262,7 @@ Leonardo Taccari <iamleot@gmail.com>
 Linas Vepstas <linasvepstas@gmail.com>
 Loren J. Rittle <rittle@latour.labs.mot.com>
 Louis Zhuang <louis.zhuang@acm.org>
+Lucas Holt <luke@foolishgames.com>
 Lucas Meijer <lucas@unity3d.com>
 Ludovic Courtes <ludo@gnu.org>
 Maarten Thibaut <mthibaut@cisco.com>
