Update AUTHORS file (add Sam James)

--- a/AUTHORS
+++ b/AUTHORS
@@ -384,6 +384,7 @@ Rutger Ovidius <ovidr@users.sourceforge.net>
 Ryan Gonzalez <rymg19@gmail.com>
 Ryan Murray <rmurray@debian.org>
 Salvador Eduardo Tropea <salvador@inti.gov.ar>
+Sam James <sam@gentoo.org>
 Samuel Martin <s.martin49@gmail.com>
 Samuel Thibault <samuel.thibault@gnu.org>
 Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
